http://www.gnu.org/licenses/gpl-2.0.txt

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog of the
Blank Template for Joomla. Thanks to all those people who've contributed 
bug reports and code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

-------------------- 1.2.0 [2012-07-25] -------------------
! lines without brace are specified to version 1.1.13 (for own rebuilding)
! lines in brace specified to 1.2
+ Twitter Bootstrap (as optional parameter)
  + bootstrap-responsive.min.css
  + bootstrap.min.css
  + glyphicons-halflings-white.png
  + glyphicons-halflings.png
  + bootstrap.min.js
  + jquery-1.7.2.min.js
+ PIE.js
+ PIE.php
+ README.md
^ index.php
  # line 14: delete ampersand; from &$app to $app
  + get parameters modernizr, bootstrap and pie (line 11-14)
  + ask parameter pie for css3 support of ie 8+7 (line 27)
  ^ ask parameter moderizr to load script in head (line 47+53)
  - line 31: delete conditional comment for ie6
  - line 40: delete link to tablet.css; integrate 
    media queries in template.css to reduce http requests
  - line 41: delete link to phone.css; integrate 
    media queries in template.css to reduce http requests
  - line 42: delete link to phone.css through conditional
    comment for iemobile; media queries in template.css
  - delete everything between <body> and </body> except the 
    debug position
^ component.php
  + line 37: php and js statement to print directly | thx Markus Hermann
  - line 16: delete conditional comment for ie6
^ error.php
  - line 16: delete conditional comment for ie6
^ offline.php
  - line 24: delete conditional comment for ie6
^ template.js.php
  + query parameter bootstrap (line 10)
  + query jquery.js and bootstrap.js (line 27+28)
^ template.css.php
  + query parameter bootstrap (line 10)
  + query require stylesheets for bootstrap (line 47+50)