@@ -19,6 +19,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+-------------------- 1.2.1 [2012-08-14] -------------------
+^ component.php: add a / to the link to modernizr.js in line 28
+^ template.js.php: remove obsolete compress function
+
 -------------------- 1.2.0 [2012-07-25] -------------------
 ! lines without brace are specified to version 1.1.13 (for own rebuilding)
 ! lines in brace specified to 1.2
